--- a/css/main.scss
+++ b/css/main.scss
@@ -10,3 +10,10 @@
 @import "clients";
 @import "difference";
 @import "footer";
+@import "faq";
+@import "instagram";
+@import "about-1";
+@import "history";
+@import "team";
+@import "services";
+@import "serviceprovide";
