--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,7 @@
 @import "counter";
 @import "about";
 @import "specialized";
+@import "watching";
 @import "motion";
 @import "animate-bus";
 @import "clients";
