index-page-updated

--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@
 @import "about";
 @import "specialized";
 @import "watching";
+@import "bigleap-video";
 @import "motion";
 @import "animate-bus";
 @import "clients";
