--- a/css/_watching.scss
+++ b/css/_watching.scss
@@ -23,22 +23,36 @@
                 width: 100%;
             }
 
-            video {
-                width: 100%;
+            iframe {
+                width: 650px;
+                height: 270px;
 
+                @include respond-below(lg) {
+                    width: 530px;
+                    height: 300px;
+                }
+
+                @include respond-below(md) {
+                    width: 100%;
+                    height: 390px;
+                }
+
+                @include respond-below(sm) {
+                    width: 100%;
+                }
             }
         }
 
         .video2 {
             width: 70%; // You can adjust the size here
 
-            @include respond-below(xl) {
-                width: 80%;
-            }
+            // @include respond-below(xl) {
+            //     width: 80%;
+            // }
 
-            @include respond-below(lg) {
-                width: 100%;
-            }
+            // @include respond-below(lg) {
+            //     width: 100%;
+            // }
 
             @include respond-below(md) {
                 width: 100%;
@@ -48,9 +62,18 @@
                 width: 100%;
             }
 
-            video {
+            iframe {
                 width: 100%;
-                height: auto;
+                height: 210px;
+
+                @include respond-below(md) {
+                    width: 688px;
+                    height: 390px;
+                }
+
+                @include respond-below(sm) {
+                    width: 100%;
+                }
 
             }
         }
@@ -81,6 +104,10 @@
         .content {
             padding-top: 80px;
 
+            @include respond-below(lg) {
+                padding-top: 20px;
+            }
+
             @include respond-below(sm) {
                 padding-top: 20px;
             }
@@ -96,8 +123,31 @@
         }
 
         .video3 {
-            video {
+           
+            @include respond-below(md) {
                 width: 100%;
+            }
+
+            @include respond-below(sm) {
+                width: 100%;
+            }
+
+            iframe {
+                width: 530px;
+                height: 250px;
+
+                @include respond-below(lg) {
+                    width: 630px;
+                }
+
+                @include respond-below(md) {
+                    width: 100%;
+                    height: 390px;
+                }
+
+                @include respond-below(sm) {
+                    width: 360px;
+                }
             }
         }
 
