--- a/css/main.css
+++ b/css/main.css
@@ -703,21 +703,29 @@ h6 {
     width: 100%;
   }
 }
-.watch-area .first-video .video1 video {
-  width: 100%;
+.watch-area .first-video .video1 iframe {
+  width: 650px;
+  height: 270px;
+}
+@media (max-width: 1199px) {
+  .watch-area .first-video .video1 iframe {
+    width: 530px;
+    height: 300px;
+  }
+}
+@media (max-width: 991px) {
+  .watch-area .first-video .video1 iframe {
+    width: 100%;
+    height: 390px;
+  }
+}
+@media (max-width: 639px) {
+  .watch-area .first-video .video1 iframe {
+    width: 100%;
+  }
 }
 .watch-area .first-video .video2 {
   width: 70%;
-}
-@media (max-width: 1599px) {
-  .watch-area .first-video .video2 {
-    width: 80%;
-  }
-}
-@media (max-width: 1199px) {
-  .watch-area .first-video .video2 {
-    width: 100%;
-  }
 }
 @media (max-width: 991px) {
   .watch-area .first-video .video2 {
@@ -729,9 +737,20 @@ h6 {
     width: 100%;
   }
 }
-.watch-area .first-video .video2 video {
+.watch-area .first-video .video2 iframe {
   width: 100%;
-  height: auto;
+  height: 210px;
+}
+@media (max-width: 991px) {
+  .watch-area .first-video .video2 iframe {
+    width: 688px;
+    height: 390px;
+  }
+}
+@media (max-width: 639px) {
+  .watch-area .first-video .video2 iframe {
+    width: 100%;
+  }
 }
 .watch-area .second-video {
   display: flex;
@@ -761,6 +780,11 @@ h6 {
 .watch-area .second-video .content {
   padding-top: 80px;
 }
+@media (max-width: 1199px) {
+  .watch-area .second-video .content {
+    padding-top: 20px;
+  }
+}
 @media (max-width: 639px) {
   .watch-area .second-video .content {
     padding-top: 20px;
@@ -772,8 +796,222 @@ h6 {
 .watch-area .second-video .content h2 {
   color: #fff;
 }
-.watch-area .second-video .video3 video {
-  width: 100%;
+@media (max-width: 991px) {
+  .watch-area .second-video .video3 {
+    width: 100%;
+  }
+}
+@media (max-width: 639px) {
+  .watch-area .second-video .video3 {
+    width: 100%;
+  }
+}
+.watch-area .second-video .video3 iframe {
+  width: 530px;
+  height: 250px;
+}
+@media (max-width: 1199px) {
+  .watch-area .second-video .video3 iframe {
+    width: 630px;
+  }
+}
+@media (max-width: 991px) {
+  .watch-area .second-video .video3 iframe {
+    width: 100%;
+    height: 390px;
+  }
+}
+@media (max-width: 639px) {
+  .watch-area .second-video .video3 iframe {
+    width: 360px;
+  }
+}
+
+.bigleap-video-area {
+  position: relative;
+  padding: 120px 0 50px 0;
+}
+@media (max-width: 1599px) {
+  .bigleap-video-area {
+    padding: 100px 0 20px 0;
+  }
+}
+@media (max-width: 1199px) {
+  .bigleap-video-area {
+    padding: 80px 0 20px 0;
+  }
+}
+@media (max-width: 991px) {
+  .bigleap-video-area {
+    padding: 60px 0 20px 0;
+  }
+}
+@media (max-width: 639px) {
+  .bigleap-video-area {
+    padding: 40px 0 40px 0;
+  }
+}
+.bigleap-video-area .bigleap .swiper-wrapper .swiper-slide {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+@media (max-width: 991px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (max-width: 639px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+  }
+}
+.bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content {
+  position: absolute;
+  left: 70px;
+  right: 0;
+  padding-top: 180px;
+}
+@media (max-width: 1599px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content {
+    padding-top: 0;
+    left: 0;
+  }
+}
+@media (max-width: 1199px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content {
+    padding-top: 0;
+  }
+}
+@media (max-width: 991px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content {
+    position: unset;
+  }
+}
+@media (max-width: 639px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content {
+    position: unset;
+  }
+}
+.bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content h6 {
+  font-size: 1rem;
+  color: #fff;
+}
+@media (max-width: 1599px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content h6 {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 1199px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content h6 {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 991px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content h6 {
+    font-size: 15px;
+  }
+}
+@media (max-width: 639px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content h6 {
+    font-size: 15px;
+  }
+}
+.bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content h2 {
+  font-size: 3.5rem;
+  color: #fff;
+  font-weight: 400;
+  width: 50%;
+  line-height: 80px;
+}
+@media (max-width: 1599px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content h2 {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 1199px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content h2 {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 991px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content h2 {
+    font-size: 2.1rem;
+  }
+}
+@media (max-width: 639px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content h2 {
+    font-size: 1.8rem;
+  }
+}
+@media (max-width: 991px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content h2 {
+    width: auto;
+    line-height: 50px;
+  }
+}
+@media (max-width: 639px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content h2 {
+    width: auto;
+    line-height: 50px;
+  }
+}
+.bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content p {
+  color: #fff;
+  line-height: 26px;
+  width: 43%;
+}
+@media (max-width: 991px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content p {
+    width: auto;
+  }
+}
+@media (max-width: 639px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .content p {
+    width: 100%;
+    line-height: 24px;
+  }
+}
+@media (max-width: 1199px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .videos {
+    padding-left: 0;
+  }
+}
+@media (max-width: 991px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .videos {
+    padding-left: 0;
+  }
+}
+.bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .videos iframe {
+  width: 780px;
+  height: 515px;
+}
+@media (max-width: 1599px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .videos iframe {
+    width: 780px;
+  }
+}
+@media (max-width: 1199px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .videos iframe {
+    width: 720px;
+    height: 475px;
+  }
+}
+@media (max-width: 991px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .videos iframe {
+    width: 670px;
+    height: 385px;
+  }
+}
+@media (max-width: 639px) {
+  .bigleap-video-area .bigleap .swiper-wrapper .swiper-slide .videos iframe {
+    width: 350px;
+    height: 345px;
+  }
 }
 
 .motion-graphics-area {
